# async_promise

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
example/: CMakeLists.txt
example/src/: main.cpp
include/: async_promise.hpp
tests/: CMakeLists.txt
tests/src/: all.cpp  all_settled.cpp  any.cpp  class_initial.cpp  class_then.cpp  common.h  constants.h  fail.cpp  finally.cpp  func_initial.cpp  func_then.cpp  funcs.cpp  funcs.h  initial.cpp  make_all.cpp  make_all_settled.cpp  make_any.cpp  make_promise.cpp  make_promise_all.cpp  make_promise_all_settled.cpp  make_promise_any.cpp  make_promise_race.cpp  make_race.cpp  make_rejected.cpp  make_rejected_promise.cpp  make_resolved.cpp  make_resolved_promise.cpp  race.cpp  reject.cpp  resolve.cpp  settled.cpp  smoke.cpp  static_all.cpp  static_all_settled.cpp  static_any.cpp  static_race.cpp  static_resolve.cpp  test_funcs.cpp  test_funcs.h  test_struct.cpp  (+2 more)
